--- a/DataStructureTest/.classpath
+++ b/DataStructureTest/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="lib" path="algs4.jar"/>
 	<classpathentry kind="lib" path="introcs.jar"/>
 	<classpathentry kind="lib" path="stdlib.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/junit-4.11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
